syntax = "proto3";

package lane.comet;
option go_package = "../comet;comet";
import "proto/msg";

message SingleReq {
  userid int64 = 1;
  lane.msg.Msg msg = 2;
}

message SingleResp {}

message BrodcastReq {
  roomid int64 = 1;
  lane.msg.Msg msg = 2;
}

message BrodcastResp {}

message BrodcastMeReq {
  int64 roomid = 1;
  int64 userid = 2;
  lane.msg.Msg msg = 3;
}

message BrodcastMeResp {}

message NoResp {}

service comet {
  rpc Single(SingleReq) returns (NoResp);
  rpc Brodcast(BrodcastReq) returns (NoResp);
  rpc BrodcastMe(BrodcastMeReq) returns (NoResp);
}
